@@ -1,0 +1,13 @@
+/*
+ *  Example library file
+ */
+
+#include <stdio.h>
+#include "userLib.h"
+
+void example_library_function(
+  int x
+)
+{
+  printf( "example_library_function(%d)\n", x );
+}
