@@ -1,0 +1,10 @@
+/*
+ *  Example Private .h file from user library
+ */
+
+#ifndef __Private_h
+#define __Private_h
+
+/* nothing to declare, just an example */
+
+#endif
