@@ -1,0 +1,12 @@
+/*
+ *  Example Public .h file from user library
+ */
+
+#ifndef __User_Library_h
+#define __User_Library_h
+
+void example_library_function(
+  int x
+);
+
+#endif
